[tool.poetry]
name = "maps"
version = "0.1.0"
description = ""
authors = ["anaka <alex.naka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.2"
googlemaps = "^4.6.0"
tqdm = "^4.63.0"
ipykernel = "^6.9.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
